change about section

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
             <h3>Color and Visual Key:</h3>
             <p>Beige represents the open spaces</p>
             <p>Dark Gray showcases walls</p>
-            <p>The target node is orange</p>
-            <p>The source node is blue</p>
-            <p>The breadth-first search is aqua blue</p>
-            <p>The shortest path is denoted by violet</p>
+            <p>The end point is red</p>
+            <p>The start point is green</p>
+            <p>The breadth-first search is purple</p>
+            <p>The shortest path is denoted by pink</p>
             <p>The steps are the numbers on the grid</p>
         </article>
 
