add dark mode button

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <button class="remove" id="action">Remove</button>
             <button class="clear" id="action">Clear Grid</button>
             <button class="about">About</button>
+            <button class="DarkMode">Dark Mode</button>
         </section>
     </nav>
 
