keep output message consistent

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <section class="data">
-        <p class="p-data">The shortest path is NULL steps</p>
+        <p class="p-data">The path is 0 steps</p>
     </section>
 
     <section class="main-section">
