add description changes

--- a/index.html
+++ b/index.html
@@ -47,15 +47,19 @@
 
         <article class="about-bfs" id="dark-mode">
             <h3>About the visualizer:</h3>
-            <p>This visualizer depicts an adjacency matrix as the graph rendered through DOM Elements.</p>
-            <p>One core feature is the ability to custom make your own map</p>
-            <p>with walls a target, and source node with ability to erase nodes.</p>
+            <p>This visualizer depicts an adjacency matrix as the graph.</p>
         </article>
 
         <article class="about-bfs" id="dark-mode">
-            <h3>Some Facts About a Breadth First Search</h3>
-            <p>A B.F.S. traversal cannot find the shortest path on weighted graphs instead use Dijikstra's</p>
-            <p>The underlying data structure for a B.F.S. is a Queue.</p>
+            <h3>Comparing and Contrasting DFS and BFS</h3>
+            <p>A breadth first search traverses wide before deep, whereas
+                a depth first search travels deep before wide.
+            </p>
+            <p>The underlying data structure for a B.F.S. is a queue, but a D.F.S. relies on a stack.</p>
+            <p>Both traversals work on directed and undirected graph.
+            </p>
+            <p>A B.F.S is not useful for a weighted graph instead use Dijkstra's Algorithm</p>
+            <p>Ultimately, both algorithms are suitable for exploring a graph and finding a target node.</p>
         </article>
 
         <article class="about-bfs" id="dark-mode">
