update to not allow repetitive traversals

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navigation">
         <h3>Maze Path Finder</h3>
         <section class="button-section">
-            <button class="dfs-button">DFS</button>
+            <button class="dfs-button" id="action">DFS</button>
             <button class="bfs-button" id="action">BFS</button>
         </section>
 
